tests/build/property/return_type_is_not_ui_node.stderr
error[E0277]: the trait bound `NotUiNode: zero_ui::core::UiNode` is not satisfied
 --> $DIR/return_type_is_not_ui_node.rs:6:59
  |
6 | pub fn invalid_output(child: impl UiNode, input: bool) -> NotUiNode {
  |                                                           ^^^^^^^^^ the trait `zero_ui::core::UiNode` is not implemented for `NotUiNode`
